Remove ParameterObject
